RESOLVED FIXED280446
[css-nesting] Fix CSSOM setSelectorText(string) to prepend implicit selector
https://bugs.webkit.org/show_bug.cgi?id=280446
Summary [css-nesting] Fix CSSOM setSelectorText(string) to prepend implicit selector
Matthieu Dubet
Reported 2024-09-26 17:23:10 PDT
When overwritring a nested selector with the CSSOM setSelectorText(string), we need to preprend the implicit selector. Test is https://github.com/web-platform-tests/wpt/blob/a9a398ca83/css/css-nesting/nested-declarations-matching.html#L219
Attachments
Radar WebKit Bug Importer
Comment 1 2024-09-26 17:23:28 PDT
Matthieu Dubet
Comment 2 2024-09-26 17:42:56 PDT
EWS
Comment 3 2024-10-01 19:52:59 PDT
Committed 284537@main (85f439ac76ff): <https://commits.webkit.org/284537@main> Reviewed commits have been landed. Closing PR #34335 and removing active labels.
EWS
Comment 4 2024-10-03 16:09:36 PDT
Committed 283286.181@safari-7620-branch (d4c4e0ecedaf): <https://commits.webkit.org/283286.181@safari-7620-branch> Reviewed commits have been landed. Closing PR #1962 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.