[CSS] Fix nested setSelectorText() to prepend implicit selector https://bugs.webkit.org/show_bug.cgi?id=280446 rdar://136791222

Reviewed by Antti Koivisto.

Previously, CSSParserImpl was doing the implicit selector prepend.
However when using the CSSOM setSelectorText(), we don't use CSSParserImpl at all.

This patch:
  * adds more information in the NestedContext structure (kind of the closest ancestor rule)
  * moves the implicit selector preprend from CSSParserImpl to CSSSelectorParser
  * passes the NestedContext to the selector parser on setSelectorText()
  * cleanups some unused parameter or redundant members

* LayoutTests/fast/css/cssom-insertrule-crash-expected.html:

Fix wrong expectations (the & selector should always be serialized)

* LayoutTests/imported/w3c/web-platform-tests/css/css-nesting/nested-declarations-matching-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-nesting/nested-declarations-matching.html:
* Source/WebCore/css/CSSGroupingRule.cpp:
(WebCore::CSSGroupingRule::insertRule):
* Source/WebCore/css/CSSRule.cpp:
(WebCore::CSSRule::parserContext const):
(WebCore::CSSRule::nestedContext const):
* Source/WebCore/css/CSSRule.h:
* Source/WebCore/css/CSSStyleRule.cpp:
(WebCore::CSSStyleRule::setSelectorText):
(WebCore::CSSStyleRule::insertRule):
* Source/WebCore/css/parser/CSSParser.cpp:
(WebCore::CSSParser::parseSupportsCondition):
* Source/WebCore/css/parser/CSSParser.h:
(WebCore::CSSParser::parseRule):
(WebCore::CSSParser::parseSelectorList):
* Source/WebCore/css/parser/CSSParserEnum.h:
* Source/WebCore/css/parser/CSSParserImpl.cpp:
(WebCore::CSSParserImpl::CSSParserImpl):
(WebCore::CSSParserImpl::consumeQualifiedRule):
(WebCore::CSSParserImpl::consumeImportRule):
(WebCore::CSSParserImpl::consumeSupportsRule):
(WebCore::CSSParserImpl::consumeScopeRule):
(WebCore::CSSParserImpl::consumeStyleRule):
(WebCore::CSSParserImpl::consumeBlockContent):
(WebCore::appendImplicitSelectorPseudoClassScopeIfNeeded): Deleted.
(WebCore::appendImplicitSelectorNestingParentIfNeeded): Deleted.
(WebCore::CSSParserImpl::appendImplicitSelectorIfNeeded): Deleted.
* Source/WebCore/css/parser/CSSParserImpl.h:
(WebCore::CSSParserImpl::CSSParserImpl):
(WebCore::CSSParserImpl::parseRule):
(WebCore::CSSParserImpl::isStyleNestedContext):
(WebCore::CSSParserImpl::lastAncestorRuleType const):
(WebCore::CSSParserImpl::isNestedContext): Deleted.

Remove unused m_scopeRuleNestingLevel (we only need m_styleRuleNestingLevel)

* Source/WebCore/css/parser/CSSSelectorParser.cpp:
(WebCore::appendImplicitSelectorPseudoClassScopeIfNeeded):
(WebCore::appendImplicitSelectorNestingParentIfNeeded):
(WebCore::appendImplicitSelectorIfNeeded):
(WebCore::parseMutableCSSSelectorList):
* Source/WebCore/css/parser/CSSSelectorParser.h:
(WebCore::CSSSelectorParser::CSSSelectorParser):
(WebCore::parseCSSSelectorList):
* Source/WebCore/css/parser/CSSSupportsParser.cpp:
(WebCore::CSSSupportsParser::supportsCondition):
* Source/WebCore/css/parser/CSSSupportsParser.h:
(WebCore::CSSSupportsParser::CSSSupportsParser):

Remove unused isNestedContext parameter

* Source/WebCore/inspector/InspectorStyleSheet.cpp:
(WebCore::isValidRuleHeaderText):
(WebCore::InspectorStyleSheet::setRuleHeaderText):
(WebCore::isNestedContext): Deleted.

Canonical link: https://commits.webkit.org/284537@main