Source/WebCore/css/parser/CSSParserEnum.h
@@ -28,11 +28,17 @@
 
 #pragma once
 
+#include <cstdint>
 namespace WebCore {
 
 namespace CSSParserEnum {
 
-enum class IsNestedContext : bool { No, Yes };
+enum class NestedContextType : bool {
+    Style,
+    Scope,
+};
+
+using NestedContext = std::optional<NestedContextType>;
 
 enum class IsForgiving : bool { No, Yes };
 
